[package]
name = "extol_sprite_layer"
version = "0.5.0"
edition = "2021"
authors = ["Ash <ext0l@catgirl.ai>"]
categories = [ "game-development" ]
description = "Explicitly-defined sprite layers for Bevy, including automatic y-sorting."
keywords = [ "gamedev", "bevy" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/deifactor/extol_sprite_layer"
exclude = [ "docs/*" ]

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false }
ordered-float = "4.2"
tap = "1.0"

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_sprite", "bevy_core_pipeline", "x11"] }
criterion = "0.5"
fastrand = "2.2"

[[bench]]
name = "benchmark"
harness = false
